# RAG-Task

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: embeddings.py  llm.py  loaders.py  retriever.py  splitter.py  vectorstore.py
